--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "npm run preresource && nuxt",
     "build": "npm run preresource && export COMMIT_REV=$(git rev-parse --short HEAD) && nuxt build",
     "start": "nuxt start",
+    "build-and-start": "npm run preresource && export COMMIT_REV=$(git rev-parse --short HEAD) && nuxt build && nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .ts,.js,.vue ."
   },
