--- a/.github/workflows/publish-ecr-image.yml
+++ b/.github/workflows/publish-ecr-image.yml
@@ -90,7 +90,7 @@ jobs:
         with:
           repository: vechain/${{ inputs.packageName }}
           tag: ${{ inputs.imageTag }}
-          # fail_threshold: high
+          fail_threshold: informational
 
       - name: On Scan Failure
         if: failure() && steps.docker-scan.outcome == 'failure'
