Don't delete image if scan fails

--- a/.github/workflows/publish-ecr-image.yml
+++ b/.github/workflows/publish-ecr-image.yml
@@ -90,11 +90,11 @@ jobs:
         with:
           repository: vechain/${{ inputs.packageName }}
           tag: ${{ inputs.imageTag }}
-          fail_threshold: informational
+          fail_threshold: high
 
-      - name: On Scan Failure
-        if: failure() && steps.docker-scan.outcome == 'failure'
-        run: |
-          aws ecr batch-delete-image \
-            --repository-name vechain/${{ inputs.packageName }} \
-            --image-ids imageTag=${{ inputs.imageTag }} imageTag=${{ inputs.latestTag }}
+      # - name: On Scan Failure
+      #   if: failure() && steps.docker-scan.outcome == 'failure'
+      #   run: |
+      #     aws ecr batch-delete-image \
+      #       --repository-name vechain/${{ inputs.packageName }} \
+      #       --image-ids imageTag=${{ inputs.imageTag }} imageTag=${{ inputs.latestTag }}
