--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -18,6 +18,7 @@ jobs:
       id-token: write
       contents: read
     strategy:
+      fail-fast: false
       matrix:
         env: [dev, prod]
         application: [explore]
